[project]
name = "hackernews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RoCry", email = "crysheen@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.5",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
example = [
    "fire>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "gitpython>=3.1.44",
    "pytest>=8.3.4",
]

